fix sketches of cities and book cover from overlapping each other in the mobile version

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,9 @@
 html {
   width: 100%;
   height: 100vh;
+  // @media screen and (max-width: 667px) {
+  //   height: 700px;
+  // }
 }
 
 // Hamburger nav
@@ -163,7 +166,10 @@ html {
   bottom: 5%; left: 12.5%;
 }
 
-//////////////////////////   STYLES FOR MOBILE     ///////////////////////////
+                ///////////////////////////////////////////////////////////
+//////////////////////////   MOIBLE VERSION STARTS HERE    ///////////////////////////
+                ///////////////////////////////////////////////////////////
+
 .wrapper {
   @media screen and (max-width: 769px) {
     display: none;
@@ -188,6 +194,9 @@ html {
   max-width: 20%;
   top: 50%; left: 20%;
   transform: translate(-50%, -50%);
+  @media screen and (max-width: 769px) {
+    max-height: 50%;
+  }
 }
 
 // controls mobile version of text //
@@ -197,6 +206,7 @@ html {
   position: absolute;
   top: 50%; left: 70%;
   transform: translate(-50%, -50%);
+  border: 1px solid magenta;
 }
 
 .blue-trackers {
@@ -231,7 +241,6 @@ html {
 
 .hello-this-working {
   @media screen and (max-width: 769px) {
-    border: 1px solid red;
     position: absolute;
     left: -120px;
   }
